2008-11-26  Xavier Queralt Mateu <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	  Fixed wizard tests

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* configure.ac:
	Back to dev.

=== release 0.5.3 ===

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	Releasing 0.5.3 "Ovella Negra".

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/dialogs.py:
	Update the list of authors.

2008-11-25  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/vfsgnome.py (GnomeVFSDirectory.getFiles):
	* flumotion/common/vfsgio.py (GIODirectory.getFiles):
	Lower log levels - that info is not that important.

2008-11-24  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
	Spanish translation updated.

2008-11-24  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/monitor/nagios/stream.py:
	genToken isn't necesary.

2008-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Change summary/description as requested by Fedora.

2008-11-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/looper/looper.py:
	Add warnings about segfault-causing version of gst-python.

2008-11-20  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/converters/overlay/overlay.py
	  (Overlay.configure_pipeline):
	Add a warning about broken gstreamer versions.

2008-11-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/examples/bouncer.xml:
	* conf/examples/default.xml:
	* conf/examples/discont.xml:
	* conf/examples/ipbouncer.xml:
	* conf/examples/twores.xml:
	* data/upgrade-to-0.5.3.xsl:
	* flumotion/component/producers/audiotest/admin_gtk.py:
	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/audiotest/wizard.glade:
	* flumotion/component/producers/audiotest/wizard_gtk.py:
	* flumotion/component/producers/soundcard/soundcard.py: